Add normalize.css and style main image

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,26 @@
 /****** Global Styles *****/
 
 
+/****** Header *****/
+.img-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.img-container img {
+    min-width: 100%;
+    min-height: 100%;
+}
 
 
 /****** Attribution *****/
 
-.attribution { font-size: 11px; text-align: center; }
+.attribution {
+    font-size: 11px;
+    text-align: center;
+}
 
-.attribution a { color: hsl(228, 45%, 44%); }
+.attribution a {
+    color: hsl(228, 45%, 44%);
+}
