--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,52 @@
 /****** Global Styles *****/
 
+body {
+    background-color: hsl(0, 0%, 100%);
+    font-family: "Outfit", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    color: hsl(30, 10%, 34%);
+    font-size: 16px;
+}
+
+h1,
+h2 {
+    color: hsl(24, 5%, 18%);
+    font-family: "Young Serif", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+h2 {
+    color: hsl(14, 45%, 36%);
+    font-family: "Young Serif", serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+h3 {
+    color: hsl(332, 51%, 32%);
+}
+
+hr {
+    background-color: hsl(30, 18%, 87%);
+    height: 1px;
+    border: none;
+}
+
+.outfit-regular {
+    font-family: "Outfit", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+}
+
+/****** Page Structure *****/
+main {
+    margin: 30px;
+}
+
 
 /****** Header *****/
 .img-container {
@@ -13,6 +60,18 @@
     min-height: 100%;
 }
 
+/****** Main Styles *****/
+.recipe-title {
+    font-size: 2.3em;
+}
+
+.recipe-details {
+    line-height: 1.5em;
+}
+
+.prep-details {
+    background-color: hsl(330, 100%, 98%);
+}
 
 /****** Attribution *****/
 
