--- a/css/main.css
+++ b/css/main.css
@@ -23,24 +23,22 @@ h2 {
     font-family: "Young Serif", serif;
     font-weight: 400;
     font-style: normal;
+    font-size: 1.75em;
 }
 
 h3 {
     color: hsl(332, 51%, 32%);
 }
 
-ul {
-    padding-left: 20px;
+ul,
+ol {
+    padding-left: 25px;
 }
 
 li {
     line-height: 1.5em;
     padding-left: 20px;
     margin-bottom: 10px;
-}
-
-li::marker {
-    font-size: .75em;
 }
 
 span {
@@ -51,6 +49,7 @@ hr {
     background-color: hsl(30, 18%, 87%);
     height: 1px;
     border: none;
+    margin: 30px 0;
 }
 
 .outfit-regular {
@@ -94,8 +93,21 @@ main {
     margin: 25px 0;
 }
 
-li.prep-marker::marker  {
-    color:hsl(332, 51%, 32%)
+li.small-marker::marker {
+    font-size: .75em;
+}
+
+ul.prep-steps li::marker {
+    color: hsl(332, 51%, 32%);
+}
+
+ul.ingredient-list li::marker,
+ol.instruction-steps li::marker {
+    color: hsl(14, 45%, 36%);
+}
+
+ol.instruction-steps li::marker {
+    font-weight: 600;
 }
 
 /****** Attribution *****/
