--- a/css/main.css
+++ b/css/main.css
@@ -1,33 +1,53 @@
 /****** Global Styles *****/
+:root {
+    --ff-accent: 'Young Serif', serif;
+    --ff-primary: 'Outfit', sans-serif;
+
+    --nutmeg: hsl(14, 45%, 36%);
+    --dark-raspberry: hsl(332, 51%, 32%);
+    --white: hsl(0, 0%, 100%);
+    --rose-white: hsl(330, 100%, 98%);
+    --eggshell: hsl(30, 54%, 90%);
+    --light-gray: hsl(30, 18%, 87%);
+    --wenge-brown: hsl(30, 10%, 34%);
+    --dark-charcoal: hsl(24, 5%, 18%);
+}
 
 body {
-    background-color: hsl(0, 0%, 100%);
-    font-family: "Outfit", sans-serif;
+    background-color: var(--white);
+    font-family: var(--ff-primary);
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
-    color: hsl(30, 10%, 34%);
+    color: var(--wenge-brown);
     font-size: 16px;
 }
 
-h1,
-h2 {
-    color: hsl(24, 5%, 18%);
-    font-family: "Young Serif", serif;
+h1 {
+    color: var(--dark-charcoal);
+    font-family: var(--ff-accent);
+    font-size: 2.3em;
     font-weight: 400;
-    font-style: normal;
 }
 
 h2 {
-    color: hsl(14, 45%, 36%);
-    font-family: "Young Serif", serif;
+    color: var(--dark-raspberry);
+    font-family: var(--ff-primary);
+    font-size: 1.25em;
+    font-weight: 600;
+}
+
+h2.section-title {
+    color: var(--nutmeg);
+    font-family: var(--ff-accent);
     font-weight: 400;
     font-style: normal;
     font-size: 1.75em;
 }
 
-h3 {
-    color: hsl(332, 51%, 32%);
+
+p {
+    line-height: 1.5;
 }
 
 ul,
@@ -36,7 +56,7 @@ ol {
 }
 
 li {
-    line-height: 1.5em;
+    line-height: 1.5;
     padding-left: 20px;
     margin-bottom: 10px;
 }
@@ -46,14 +66,43 @@ span {
 }
 
 hr {
-    background-color: hsl(30, 18%, 87%);
+    background-color: var(--light-gray);
     height: 1px;
     border: none;
     margin: 30px 0;
 }
 
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+tr {
+    border-bottom: 1px solid var(--light-gray);
+}
+
+tr:last-child {
+    border-bottom: none;
+}
+
+th,
+td {
+    text-align: left;
+    padding: 15px 0 15px 40px;
+}
+
+
+th {
+    font-weight: 400;
+}
+
+td {
+    color: var(--nutmeg);
+    font-weight: 600;
+}
+
 .outfit-regular {
-    font-family: "Outfit", sans-serif;
+    font-family: var(--ff-primary);
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
@@ -78,16 +127,13 @@ main {
 }
 
 /****** Main Styles *****/
-.recipe-title {
-    font-size: 2.3em;
-}
 
 .recipe-details {
-    line-height: 1.5em;
+    line-height: 1.5;
 }
 
 .prep-details {
-    background-color: hsl(330, 100%, 98%);
+    background-color: var(--rose-white);
     padding: 5px 25px;
     border-radius: 10px;
     margin: 25px 0;
@@ -98,23 +144,25 @@ li.small-marker::marker {
 }
 
 ul.prep-steps li::marker {
-    color: hsl(332, 51%, 32%);
+    color: var(--dark-raspberry);
 }
 
 ul.ingredient-list li::marker,
 ol.instruction-steps li::marker {
-    color: hsl(14, 45%, 36%);
+    color: var(--nutmeg);
 }
 
 ol.instruction-steps li::marker {
     font-weight: 600;
 }
 
+
 /****** Attribution *****/
 
 .attribution {
     font-size: 11px;
     text-align: center;
+    margin-bottom: 10px;
 }
 
 .attribution a {
